header spacing fixed

--- a/css/framework.css
+++ b/css/framework.css
@@ -1,7 +1,8 @@
 /* ================================================== RESET ======================================================== */
-*{
+* {
     margin: 0;
     padding: 0;
+    border: none;
     box-sizing: border-box;
 }
 
@@ -20,6 +21,14 @@ a:hover {
 /* ================================================== GENERAL ======================================================= */
 .image-container img {
     width: 100%;
+}
+
+.d-inline-b {
+    display: inline-block;
+}
+
+.d-none {
+    display: none;
 }
 
 .d-flex {
@@ -73,17 +82,17 @@ body {
 /* ================================================= FONT ========================================================= */
 @font-face {
     font-family: 'OpenSans Regular';
-    src: url("Open_Sans/OpenSans-Regular.ttf");
+    src: url("../Open_Sans/OpenSans-Regular.ttf");
 }
 
 @font-face {
     font-family: 'OpenSans Light';
-    src: url("Open_Sans/OpenSans-Light.ttf");
+    src: url("../Open_Sans/OpenSans-Light.ttf");
 }
 
 @font-face {
     font-family: 'OpenSans Bold';
-    src: url("Open_Sans/OpenSans-Bold.ttf");
+    src: url("../Open_Sans/OpenSans-Bold.ttf");
 }
 
 /* ============================================= MARGINS & PADDINGS ================================================ */
@@ -177,7 +186,7 @@ body {
 }
 
 .col-5 {
-    width: 41.66%
+    width: 41.66%;
 }
 
 .col-6 {
@@ -185,7 +194,7 @@ body {
 }
 
 .col-7 {
-    width: 58.33%
+    width: 58.33%;
 }
 
 .col-8 {
@@ -197,7 +206,7 @@ body {
 }
 
 .col-10 {
-    width: 83.33%
+    width: 83.33%;
 }
 
 .col-11 {
@@ -209,50 +218,59 @@ body {
 }
 
 @media screen and (max-width: 1024px) {
+
+    .d-md-flex {
+        display: flex;
+    }
+
+    .d-md-none {
+        display: none;
+    }
+
     .col-md-1 {
         width: 8.33%;
     }
-    
+
     .col-md-2 {
         width: 16.66%;
     }
-    
+
     .col-md-3 {
         width: 25%;
     }
-    
+
     .col-md-4 {
         width: 33.33%;
     }
-    
+
     .col-md-5 {
-        width: 41.66%
+        width: 41.66%;
     }
-    
+
     .col-md-6 {
         width: 50%;
     }
-    
+
     .col-md-7 {
-        width: 58.33%
+        width: 58.33%;
     }
-    
+
     .col-md-8 {
         width: 66.66%;
     }
-    
+
     .col-md-9 {
         width: 75%;
     }
-    
+
     .col-md-10 {
-        width: 83.33%
+        width: 83.33%;
     }
-    
+
     .col-md-11 {
         width: 91.66%;
     }
-    
+
     .col-md-12 {
         width: 100%;
     }
@@ -262,47 +280,47 @@ body {
     .col-sm-1 {
         width: 8.33%;
     }
-    
+
     .col-sm-2 {
         width: 16.66%;
     }
-    
+
     .col-sm-3 {
         width: 25%;
     }
-    
+
     .col-sm-4 {
         width: 33.33%;
     }
-    
+
     .col-sm-5 {
-        width: 41.66%
+        width: 41.66%;
     }
-    
+
     .col-sm-6 {
         width: 50%;
     }
-    
+
     .col-sm-7 {
-        width: 58.33%
+        width: 58.33%;
     }
-    
+
     .col-sm-8 {
         width: 66.66%;
     }
-    
+
     .col-sm-9 {
         width: 75%;
     }
-    
+
     .col-sm-10 {
-        width: 83.33%
+        width: 83.33%;
     }
-    
+
     .col-sm-11 {
         width: 91.66%;
     }
-    
+
     .col-sm-12 {
         width: 100%;
     }
