--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,23 @@ header {
     top: 0;
     background: #fff;
     z-index: 10;
+    font-size: 14px;
 }
 
 .header-top {
     justify-content: space-between;
 }
 
+.header-top .logo {
+    margin-right: 5px;
+}
+
 .header-top .logo .icon {
     font-size: 35px;
+}
+
+.header-top .search {
+    flex-grow: 2;
 }
 
 .header-top .search label {
@@ -23,10 +32,10 @@ header {
 }
 
 .header-top .search input[type="text"] {
-    width: 90%;
     background: #eee;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
+    width: 90%;
 }
 
 .header-top .links a {
@@ -41,7 +50,7 @@ header {
     border: solid 1px #939393;
     text-align: center;
     font-size: 14px;
-    padding: 6px 10px 0 10px;
+    padding: 8px 10px 0 10px;
     border-radius: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -68,7 +77,7 @@ header {
     background: #3cb46e;
     text-align: center;
     font-size: 14px;
-    padding: 7px 12px 0 12px;
+    padding: 10px 12px 0 12px;
     border-radius: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -86,6 +95,7 @@ header {
     width: 100%;
     justify-content: flex-start;
     margin: 10px 10px 0 10px;
+    overflow: hidden;
 }
 
 .nav-list .list-item {
